# kfg-client

./: .gitignore  .gitmodules  CMakeLists.txt  devnotes.md
app-src/: CMakeLists.txt  board.c  board.h  camera.c  camera.h  dreadful-hacks.c  helpers.c  helpers.h  main.c  matcap.c  material.c  material.h  mesh-tools.c  mesh-tools.h  model.c  model.h  omni-include.h  random-walker.c  record.c  record.h  scene.c  scene.h  transform.c
app-src/assets/models/: go-board-basic.stl  go-stone-basic1.stl  meshed_sphere.stl  mushu.stl
app-src/assets/scenes/: go-board-basic.glb
app-src/assets/scenes/go-board/: go-board.gltf
app-src/shaders/board/: board.frag  board.vert  stones.frag  stones.vert
app-src/shaders/depth/: wip-depth.frag
app-src/shaders/matcap/: fragment.frag  vertex.vert
app-src/shaders/model/: model-simple.frag  model-with-shadow.frag  model-with-shadow.vert  model.frag  model.vert
app-src/shaders/postprocessing-pallet/: just-depth.frag  screen.vert
app-src/shaders/random-walker/: screen.frag  stylus.frag  stylus.vert
app-src/shaders/transform/: fragment.frag
libs/: CMakeLists.txt
libs/3d-play/: CMakeLists.txt  Makefile
libs/3d-play/lib/: camera.h  dreadful-hacks.h  dynarr.h  error-handling.h  framebuffer.h  geometry.h  helpers.h  matrix.h  mesh-tools.h  model.h  omni-include.h  platform.h  post-processing-effects.h  primatives.h  scene.h  shader.h  stlreader.h  texture.h  transformation.h  utilities.h  vertices.h
libs/3d-play/src/: camera.c  dynarr.c  error-handling.c  framebuffer.c  geometry.c  helpers.c  matrix.c  mesh-tools.c  model.c  post-processing-effects.c  primatives.c  scene.c  shader.c  stlreader.c  tests.c  texture.c  transformation.c  utilities.c  vertices.c
libs/3d-play/testing/: tests.c
libs/glad/: CMakeLists.txt
libs/glad/lib/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.4.bin.MACOS/: CMakeLists.txt
libs/linmath/: CMakeLists.txt
libs/stb/: CMakeLists.txt
mingw-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
mingw-build/app-src/: Makefile  cmake_install.cmake
mingw-build/app-src/assets/models/: meshed_cube.stl
mingw-build/app-src/shaders/model/: model.frag
mingw-build/app-src/shaders/postprocessing-pallet/: 3x3kernel.frag  no-effect.frag
mingw-build/libs/: Makefile  cmake_install.cmake
mingw-build/libs/3d-play/: Makefile  cmake_install.cmake
mingw-build/libs/assimp/: Makefile  assimp.pc  cmake_install.cmake
mingw-build/libs/assimp/code/: Makefile  cmake_install.cmake
mingw-build/libs/assimp/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  zlib.pc
mingw-build/libs/assimp/include/assimp/: revision.h
mingw-build/libs/assimp/test/: Makefile  cmake_install.cmake
mingw-build/libs/assimp/test/headercheck/: Makefile  cmake_install.cmake
mingw-build/libs/cglm/: Makefile  cglm.pc  cglmConfig.cmake  cmake_install.cmake
mingw-build/libs/glad/: Makefile  cmake_install.cmake
mingw-build/libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
mingw-build/libs/glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
mingw-build/libs/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
mingw-build/libs/linmath/: Makefile  cmake_install.cmake
mingw-build/libs/stb/: Makefile  cmake_install.cmake
side-projects/: CMakeLists.txt
side-projects/moire/: CMakeLists.txt  image.c  image.h  main.c
side-projects/moire/shaders/postprocessing-pallet/: 3x3kernel.frag  blur.frag  sharpen.frag
tests/: CmakeLists.txt  joystick.c
